--- a/src/main/scala/converter/view/Converter.fxml
+++ b/src/main/scala/converter/view/Converter.fxml
@@ -4,22 +4,22 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="converter.controller.UnitConverterPresenter">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="141.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="converter.controller.UnitConverterPresenter">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="10.0" prefWidth="115.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.0" minWidth="10.0" prefWidth="485.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="78.0" minHeight="0.0" prefHeight="33.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="200.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="289.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="291.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label text="Conversion Type:" />
       <Label text="From:" GridPane.rowIndex="1" />
       <Label text="To:" GridPane.rowIndex="2" />
-      <ComboBox fx:id="types" prefWidth="150.0" GridPane.columnIndex="1" />
+      <ComboBox fx:id="types" prefHeight="26.0" prefWidth="351.0" GridPane.columnIndex="1" />
       <TextField fx:id="from" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="to" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Button mnemonicParsing="false" onAction="#onClose" text="Close" GridPane.columnIndex="1" GridPane.rowIndex="3" />
