--- a/src/main/scala/person/view/PersonOverview.fxml
+++ b/src/main/scala/person/view/PersonOverview.fxml
@@ -4,52 +4,59 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="person.presenter.PersonOverviewPresenter">
+<AnchorPane prefHeight="383.0" prefWidth="529.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="person.presenter.PersonOverviewPresenter">
     <children>
-        <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="personTable" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Last Name"/>
-                                <TableColumn prefWidth="75.0" text="First Name"/>
+                                <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Last Name" />
+                                <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="First Name" />
                             </columns>
                             <columnResizePolicy>
-                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                             </columnResizePolicy>
                         </TableView>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="430.0" prefWidth="423.0">
                     <children>
                         <GridPane AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label text="Last Name:"/>
-                                <Label text="First Name:" GridPane.rowIndex="1"/>
-                                <Label text="Phone:" GridPane.rowIndex="2"/>
+                                <Label text="Last Name:" />
+                                <Label text="First Name:" GridPane.rowIndex="1" />
+                                <Label text="Street:" GridPane.rowIndex="2" />
+                        <Label fx:id="lastNameLabel" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="firstNameLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="streetLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="City:" GridPane.rowIndex="3" />
+                        <Label fx:id="cityLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Birthday:" GridPane.rowIndex="5" />
+                        <Label fx:id="birthdayLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Postal Code:" GridPane.rowIndex="4" />
+                        <Label fx:id="postalCodeLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                             </children>
                         </GridPane>
-                        <Label layoutX="14.0" layoutY="6.0" text="Person Details:" AnchorPane.leftAnchor="5.0"
-                               AnchorPane.topAnchor="5.0"/>
+                        <Label layoutX="14.0" layoutY="6.0" text="Person Details:" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
                         <HBox layoutX="189.0" layoutY="504.0" spacing="10.0">
                             <children>
-                                <Button layoutX="105.0" layoutY="477.0" mnemonicParsing="false" text="New..."/>
-                                <Button layoutX="175.0" layoutY="477.0" mnemonicParsing="false" text="Edit..."/>
-                                <Button layoutX="255.0" layoutY="477.0" mnemonicParsing="false" text="Delete"/>
+                                <Button layoutX="105.0" layoutY="477.0" mnemonicParsing="false" text="New..." />
+                                <Button layoutX="175.0" layoutY="477.0" mnemonicParsing="false" text="Edit..." />
+                                <Button layoutX="255.0" layoutY="477.0" mnemonicParsing="false" text="Delete" />
                             </children>
                         </HBox>
                     </children>
@@ -58,4 +65,3 @@
         </SplitPane>
     </children>
 </AnchorPane>
-
