--- a/src/main/scala/person/view/PersonOverview.fxml
+++ b/src/main/scala/person/view/PersonOverview.fxml
@@ -42,7 +42,7 @@
                                 <Label text="Street:" GridPane.rowIndex="2" />
                         <Label fx:id="lastNameLabel" text="Label" GridPane.columnIndex="1" />
                         <Label fx:id="firstNameLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="streetLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="streetLabel" prefHeight="16.0" prefWidth="92.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label text="City:" GridPane.rowIndex="3" />
                         <Label fx:id="cityLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Birthday:" GridPane.rowIndex="5" />
