--- a/src/main/scala/person/view/PersonOverview.fxml
+++ b/src/main/scala/person/view/PersonOverview.fxml
@@ -55,7 +55,7 @@
                         <HBox layoutX="189.0" layoutY="504.0" spacing="10.0">
                             <children>
                                 <Button layoutX="105.0" layoutY="477.0" mnemonicParsing="false" onAction="#handleNewPerson" text="New..." />
-                                <Button layoutX="175.0" layoutY="477.0" mnemonicParsing="false" text="Edit..." />
+                                <Button layoutX="175.0" layoutY="477.0" mnemonicParsing="false" onAction="#handleEditPerson" text="Edit..." />
                                 <Button layoutX="255.0" layoutY="477.0" mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                             </children>
                         </HBox>
