--- a/src/main/scala/person/view/BirthdayStatistics.fxml
+++ b/src/main/scala/person/view/BirthdayStatistics.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="person.presenter.BirthdayStatisticsPresenter">
    <children>
-      <BarChart fx:id="barChart" layoutX="74.0" layoutY="28.0" prefHeight="480.0" prefWidth="620.0" title="Birthday Distribution" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BarChart fx:id="barChart" layoutX="74.0" layoutY="28.0" legendVisible="false" prefHeight="480.0" prefWidth="620.0" title="Birthday Distribution" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <xAxis>
-          <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+          <CategoryAxis label="Month" side="BOTTOM" tickLabelRotation="90.0" fx:id="xAxis" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
